--- a/Actividad 3.3.1.css
+++ b/Actividad 3.3.1.css
@@ -40,7 +40,7 @@ background-color: #524948;
     width: 1865px;
     margin-left: -0.5%;                                       /*centramos la imagen de fondo de la izquiera*/
     margin-top: -0.5%;                                         /*centramos la imagen de arriba*/
-    background-image: url(52594-programacion.jpg);
+    background-image: url(Fondo.jpg);
 }
 
 
